[CHK-449] feat: update domain model for PSPs
