# src/main/java/it/pagopa/ecommerce/payment/instruments/infrastructure/PspDocument.java
@@ -5,7 +5,6 @@ import lombok.Data;
 import org.springframework.data.annotation.Id;
 import org.springframework.data.mongodb.core.mapping.Document;
 
-import java.util.List;
 
 @Data
 @AllArgsConstructor
@@ -13,13 +12,13 @@ import java.util.List;
 public class PspDocument {
 
     @Id
-    private String pspCode;
-    private String paymentInstrumentID;
+    private PspDocumentKey pspDocumentKey;
     private String pspStatus;
-    private String pspType;
-    private String pspName;
+    private String pspBusinessName;
     private String pspBrokerName;
     private String pspDescription;
-    private List<String> pspLanguages;
-    private List<String> pspRanges;
+    private String pspLanguage;
+    private Double pspMinAmount;
+    private Double pspMaxAmount;
+    private Double pspFixedCost;
 }
